--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
         </main>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
